# platconf

./: pyproject.toml
src/platconf/: __init__.py
